<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_padding_default"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_nombre"
            app:helperText="@string/help_required"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_max_lon"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_apellido"
            app:helperText="@string/help_required"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_max_lon"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_default"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/tilAltura"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:hint="@string/hint_estatura"
                app:helperText="@string/help_min_estatura"
                app:startIconDrawable="@drawable/ic_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAltura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="@integer/altura_max_lon"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/etLugarNacimiento"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/tilFechaNac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_marginStart="@dimen/common_padding_min"
                android:hint="@string/fecha_de_nacimiento"
                app:startIconDrawable="@drawable/ic_calendar_today"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaNac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pais"
            android:layout_marginTop="@dimen/common_padding_default"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvPaises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_lugar_de_nacimiento"
            app:startIconDrawable="@drawable/ic_place"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLugarNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:maxLength="@integer/lugar_nacimiento_max_long"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_notas"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/text_max_long"
            app:startIconDrawable="@drawable/ic_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="@integer/text_max_long"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>

<!--
style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" <- es lo que hace que el hint se vea arriba
android:imeOptions="actionNext"
android:nextFocusForward="@id/etAltura" <- para saltar los textsviews-->
